fix(snack-bar): show missing border

--- a/src/app/components/__base/toast/toast.component.scss
+++ b/src/app/components/__base/toast/toast.component.scss
@@ -8,7 +8,3 @@
     margin-left: 12px;
   }
 }
-
-.mdc-snackbar__surface {
-  border: var(--mat-snackbar-supporting-text-color) 2px solid;
-}
