--- a/src/styles/material/_snack-bar.scss
+++ b/src/styles/material/_snack-bar.scss
@@ -31,3 +31,7 @@ $error-tokens: (
   supporting-text-color: var(--mat-sys-on-error-container),
   button-color: var(--mat-sys-error),
 );
+
+.mdc-snackbar__surface {
+  border: var(--mat-snack-bar-supporting-text-color) 2px solid;
+}
